Fixed error which made -col not work (extra padding), and fixed the fetch from the backend

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -46,9 +46,10 @@ body{
 a {
     color: var(--link-color);
     text-decoration: none;
+    font-family: Raleway;
+    padding: 20px;
+    font-size: 125%;
 }
-
-
 
 .navbar {
     display: flex;
@@ -101,12 +102,6 @@ h2 {
     text-shadow: 2px 2px 20px var(--dark-shadow-color);
 }
 
-a {
-    font-family: Raleway;
-    padding: 20px;
-    font-size: 125%;
-}
-
 button {
     outline: none;
     border-style: none;
@@ -153,7 +148,6 @@ header{
     background-color: var(--main-color);
     background-image: linear-gradient(90deg, #111, var(--main-color));
     color: white;
-    padding: 10px;
 }
 
 #contactHeading {
